# workshop_01

./: CMakeLists.txt
apps/: 01_eigen_tester.cpp  02_csv_points_rotation.cpp
data/: rectangle_points10.csv  rectangle_points10_retated.csv  test.csv
include/scan_matching/: csv_reader.hpp
scripts/: plot_points.py
src/: csv_reader.cpp
